manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdal-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdal
  template:
    metadata:
      labels:
        app: heimdal
    spec:
      serviceAccountName: heimdal-sa
      containers:
        - name: heimdal
          image: devorbitus/heimdal:1.3.1
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
