manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: heimdal-service
spec:
  type: ClusterIP
  selector:
    app: heimdal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
